# SocketExample

./: .gitignore  LICENSE  README.md
client/: CMakeLists.txt  client.cpp  client.py
server/: CMakeLists.txt  server.cpp  server.py
